--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -15,7 +15,7 @@
 
     h2 {
       color: $dark-blue;
-      font-size: rem(18);
+      font-size: rem(20);
       margin-bottom: rem(12);
     }
 
