--- a/src/assets/scss/layout/_cards.scss
+++ b/src/assets/scss/layout/_cards.scss
@@ -2,7 +2,7 @@
 
 .cards {
   @include grid-centering();
-  gap: rem(20);
+  gap: rem(30);
   grid-template-areas:
     "supervisor builder calculator"
     "supervisor karma calculator";
